--- a/project.html
+++ b/project.html
@@ -60,7 +60,7 @@
             <button><img id="button-left" src="img-project/左切換.png" alt="button-left"></button>
             <button><img id="button-right" src="img-project/右切換.png" alt="button-right"></button>
             <img id="project1" src="img-project/海報.jpg" alt="project1">
-            <img id="project2" src="img-project/_6fbb1592-1d3f-48e7-96da-03b9190a3820.png" alt="project2">
+            <img id="project2" src="img-project/project2.png" alt="project2">
             <img id="project3" src="img-project/Treasure Island Journey_A4.jpg" alt="project3">
             <img id="project4" src="img-project/YOUNGBLOOD(A4).png" alt="project4">
             <div id="black"></div>
@@ -157,7 +157,7 @@
     <div id="project-container2">
         <div class="project-container-1">
             <div class="project-1">
-                <img id="post-2" class="logo-img" src="img-project/_6fbb1592-1d3f-48e7-96da-03b9190a3820.png" alt="">
+                <img id="post-2" class="logo-img" src="img-project/project2.png" alt="">
                 <h2>遺忘之城的秘密</h2>
                 <h4>#rpg maker #game #劇情</h4>
                 <p>
