--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                     <img id="line2" src="img/Rectangle 21.png" alt="">
                     <button id="recycle"><a href="project.html"><p>NoAh's CHAOS</p></a></button>
                     <button id="river"><a href="project.html"><p>貓愁溪</p></a></button>
-                    <button id="twitch"><a href="project.html"><p>劍巫</p></a></button>
+                    <button id="witch"><a href="project.html"><p>劍巫</p></a></button>
                     <button id="heart"><a href="project.html"><p>Crossroads</p></a></button>
                     <h2 id="h2-3">指尖 Z Power</h2>
                     <img id="line3" src="img/Rectangle 21.png" alt="">
-                    <button id="rock"><a href="project.html"><p>永恆之石的傳奇S</p></a></button>
+                    <button id="rock"><a href="project.html"><p>永恆之石的傳奇</p></a></button>
                     <button id="food"><a href="project.html"><p>菜鳥食驗嘉</p></a></button>
                     <button id="Play"><a href="project.html"><p>老闆，嘉義碗</p></a></button>
                     <button id="mushroom"><a href="project.html"><p>菇義</p></a></button>
