--- a/project.html
+++ b/project.html
@@ -38,17 +38,17 @@
                     <button id="school"><a href="project.html"><p>校園迷蹤Campus Quest</p></a></button>
                     <h2 id="h2-2">超現實探索指南</h2>
                     <img id="line2" src="img/Rectangle 21.png" alt="">
-                    <button id="recycle"><a href="project.html"><p>NoAh's CHAOS</p></a></button>
-                    <button id="river"><a href="project.html"><p>貓愁溪</p></a></button>
-                    <button id="twitch"><a href="project.html"><p>劍巫</p></a></button>
-                    <button id="heart"><a href="project.html"><p>Crossroads</p></a></button>
+                    <button id="recycle"><a href="project1.html"><p>NoAh's CHAOS</p></a></button>
+                    <button id="river"><a href="project1.html"><p>貓愁溪</p></a></button>
+                    <button id="witch"><a href="project1.html"><p>劍巫</p></a></button>
+                    <button id="heart"><a href="project1.html"><p>Crossroads</p></a></button>
                     <h2 id="h2-3">指尖 Z Power</h2>
                     <img id="line3" src="img/Rectangle 21.png" alt="">
-                    <button id="rock"><a href="project.html"><p>永恆之石的傳奇S</p></a></button>
-                    <button id="food"><a href="project.html"><p>菜鳥食驗嘉</p></a></button>
-                    <button id="Play"><a href="project.html"><p>老闆，嘉義碗</p></a></button>
-                    <button id="mushroom"><a href="project.html"><p>菇義</p></a></button>
-                    <button id="music"><a href="project.html"><p>潮言搖擺</p></a></button>
+                    <button id="rock"><a href="project2.html"><p>永恆之石的傳奇S</p></a></button>
+                    <button id="food"><a href="project2.html"><p>菜鳥食驗嘉</p></a></button>
+                    <button id="Play"><a href="project2.html"><p>老闆，嘉義碗</p></a></button>
+                    <button id="mushroom"><a href="project2.html"><p>菇義</p></a></button>
+                    <button id="music"><a href="project2.html"><p>潮言搖擺</p></a></button>
                     <button id="close"><img src="img/close 1.png" alt=""></button>
                 </div>
             </div>
@@ -89,28 +89,28 @@
         </div>
         <div class="project-container-2">
             <div class="project-2">
-                <img class="info-img" src="img-project/海報.jpg" alt="">
-                <button><img class="button-left" src="img-project/Left Narrow.png" alt=""></button>
-                <button><img class="button-right" src="img-project/Right Narrow.png" alt=""></button>
+                <button><img class="button-left-1" src="img-project/Left Narrow.png" alt=""></button>
+                <button><img class="button-right-1" src="img-project/Right Narrow.png" alt=""></button>
                 <div class="info-p">
+                    <img class="info-img" src="img-project/海報.jpg" alt="">
                     <h2>畢業專題介紹</h2>
                     <h4>      </h4>
                     <p>
-                        在誘惑與挑戰交織的成長之路上，學生們<br>
-                        面對的不僅是學業壓力，還有潛伏的誘惑<br>
-                        與墮落之影。這些誘惑可能來自手機、關<br>
-                        係壓力或虛假的滿足感，試圖削弱意志、<br>
-                        偏離正道。然而，每位學生內心深藏著力<br>
-                        量——自律與智慧。只有勇敢抵抗誘惑、堅<br>
-                        守初心，他們才能掌控未來，戰勝內心的<br>
-                        黑暗，成為真正的自己。這是一場自我博<br>
-                        弈，每一步選擇都將改寫命運的篇章。
+                        在誘惑與挑戰交織的成長之路上，學生們面對的不僅是學業壓力，還有潛伏的誘惑與墮落之影。<br>
+                        這些誘惑可能來自手機、關係壓力或虛假的滿足感，試圖削弱意志、偏離正道。然而，每位學生<br>
+                        內心深藏著力量——自律與智慧。只有勇敢抵抗誘惑、堅守初心，他們才能掌控未來，戰勝內心的<br>
+                        黑暗，成為真正的自己。這是一場自我博弈，每一步選擇都將改寫命運的篇章。
                     </p>
                 </div>
-                <img class="light-2" src="img-project/Ellipse 8.png" alt="">
-                <img class="light-3" src="img-project/Ellipse 6 (2).png" alt="">
-                <img class="description-3" src="img-project/作品11 (1).png" alt="">
+                <div class="info-p-1">
+                </div>
+                <div class="info-p-2">
+
+                </div>
             </div>
+            <img class="light-2" src="img-project/Ellipse 8.png" alt="">
+            <img class="light-3" src="img-project/Ellipse 6 (2).png" alt="">
+            <img class="description-3" src="img-project/作品11 (1).png" alt="">
         </div>
         <div class="project-container-3">
             <div class="project-3">
@@ -173,10 +173,10 @@
         </div>
         <div class="project-container-2">
             <div class="project-2">
-                <img class="info-img" src="img-project/logo.jpg" alt="">
-                <button><img class="button-left" src="img-project/Left Narrow.png" alt=""></button>
-                <button><img class="button-right" src="img-project/Right Narrow.png" alt=""></button>
+                <button><img class="button-left-1" src="img-project/Left Narrow.png" alt=""></button>
+                <button><img class="button-right-1" src="img-project/Right Narrow.png" alt=""></button>
                 <div class="info-p">
+                    <img class="info-img" src="img-project/logo.jpg" alt="">
                     <h2>畢專主題介紹</h2>
                     <h4>      </h4>
                     <p>
@@ -185,10 +185,12 @@
                         解各種大大小小的活動。
                     </p>
                 </div>
-                <img class="light-2" src="img-project/Ellipse 8.png" alt="">
-                <img class="light-3" src="img-project/Ellipse 6 (2).png" alt="">
-                <img class="description-3" src="img-project/作品11 (1).png" alt="">
+                <div class="info-p-1"></div>
+                <div class="info-p-2"></div>
             </div>
+            <img class="light-2" src="img-project/Ellipse 8.png" alt="">
+            <img class="light-3" src="img-project/Ellipse 6 (2).png" alt="">
+            <img class="description-3" src="img-project/作品11 (1).png" alt="">
         </div>
         <div class="project-container-3">
             <div class="project-3">
@@ -251,39 +253,30 @@
         </div>
         <div class="project-container-2">
             <div class="project-2">
-                <img class="info-img" src="img-project/Intro.jpg" alt="">
-                <button><img class="button-left" src="img-project/Left Narrow.png" alt=""></button>
-                <button><img class="button-right" src="img-project/Right Narrow.png" alt=""></button>
+                <button><img class="button-left-1" src="img-project/Left Narrow.png" alt=""></button>
+                <button><img class="button-right-1" src="img-project/Right Narrow.png" alt=""></button>
                 <div class="info-p">
+                    <img class="info-img" src="img-project/Intro.jpg" alt="">
                     <h2>畢業專題介紹</h2>
                     <h4>      </h4>
                     <p>
-                        「寶島征程」以台灣歷史為主軸，發想出<br>
-                        台灣有歷史紀錄以來所發生的各類大事件<br>
-                        ，結合各個在歷史留名的人物做為角色，<br>
-                        加上平常課本根本不會提起的冷門知識作<br>
-                        為遊戲中的小插曲，所組成的類似於大富<br>
-                        翁的桌遊，這款遊戲的獨特之處在於其結<br>
-                        合了歷史探索和策略挑戰的元素。<br>
-                        玩家可以扮演歷史名人，利用他們的特殊<br>
-                        技能和背景故事來影響遊戲表現。每回合<br>
-                        ，事件卡將抽取台灣史上的重要事件，對<br>
-                        玩家產生影響，增加了隨機性。在探索台<br>
-                        灣本島的地圖上，玩家可以建造屬於自己<br>
-                        的領地，獲得特殊效果或收取過路費，同<br>
-                        時也可以透過對決卡挑戰冷門但有趣的歷<br>
-                        史知識。更具備時間旅行元素，讓玩家跳<br>
-                        躍到不同的歷史時期，影響事件和角色。<br>
-                        遊戲是多人競爭模式，使得遊戲更具互動<br>
-                        性。總之，這款遊戲融合了學習與娛樂，<br>
-                        讓玩家在享受遊戲樂趣的同時，也能深入<br>
-                        了解台灣的歷史和文化。
+                        「寶島征程」以台灣歷史為主軸，發想出台灣有歷史紀錄以來所發生的各類大事件，結合各個在<br>
+                        歷史留名的人物做為角色，加上平常課本根本不會提起的冷門知識作為遊戲中的小插曲，所組成<br>
+                        的類似於大富翁的桌遊，這款遊戲的獨特之處在於其結合了歷史探索和策略挑戰的元素。玩家可<br>
+                        以扮演歷史名人，利用他們的特殊技能和背景故事來影響遊戲表現。每回合，事件卡將抽取台灣<br>
+                        史上的重要事件，對玩家產生影響，增加了隨機性。在探索台灣本島的地圖上，玩家可以建造屬<br>
+                        於自己的領地，獲得特殊效果或收取過路費，同時也可以透過對決卡挑戰冷門但有趣的歷史知識<br>
+                        。更具備時間旅行元素，讓玩家跳躍到不同的歷史時期，影響事件和角色。遊戲是多人競爭模式<br>
+                        ，使得遊戲更具互動性。總之，這款遊戲融合了學習與娛樂，讓玩家在享受遊戲樂趣的同時，也<br>
+                        能深入了解台灣的歷史和文化。
                     </p>
                 </div>
-                <img class="light-2" src="img-project/Ellipse 8.png" alt="">
-                <img class="light-3" src="img-project/Ellipse 6 (2).png" alt="">
-                <img class="description-3" src="img-project/作品11 (1).png" alt="">
+                <div class="info-p-1"></div>
+                <div class="info-p-2"></div>
             </div>
+            <img class="light-2" src="img-project/Ellipse 8.png" alt="">
+            <img class="light-3" src="img-project/Ellipse 6 (2).png" alt="">
+            <img class="description-3" src="img-project/作品11 (1).png" alt="">
         </div>
         <div class="project-container-3">
             <div class="project-3">
@@ -345,34 +338,32 @@
             </div>
         </div>
         <div class="project-container-2">
-            <div class="project-2">
-                <img class="info-img" src="img-project/Intro1.png" alt="">
-                <button><img class="button-left" src="img-project/Left Narrow.png" alt=""></button>
-                <button><img class="button-right" src="img-project/Right Narrow.png" alt=""></button>
+            <div class="project-2-1">
+                <button><img class="button-left-1" src="img-project/Left Narrow.png" alt=""></button>
+                <button><img class="button-right-1" src="img-project/Right Narrow.png" alt=""></button>
                 <div class="info-p">
+                    <img class="info-img" src="img-project/YOUNGBLOOD(A4).png" alt="">
                     <h2>畢業專題介紹</h2>
                     <h4>      </h4>
                     <p>
-                        「Young Blood長青體數能」是兩位熱愛<br>
-                        運動的數位系學生共同設計推動年長者與<br>
-                        久坐族的健康計畫，增強他們對運動及身<br>
-                        體健康的連結。在數位系與體育系教授的<br>
-                        指導下，我們結合數位資源與體育專業，<br>
-                        製作了兩款桌遊卡牌：破冰遊戲「阿罵ㄟ<br>
-                        炒麵」和運動圖示桌遊卡牌。「阿罵ㄟ炒<br>
-                        麵」融入嘉義在地元素(牡蠣、空心菜)，<br>
-                        增進年長者的認知、心理、社交健康，趣<br>
-                        味且益智；運動圖示卡牌則涵蓋暖身、肌<br>
-                        耐力、心肺和伸展動作，提供視覺指導、<br>
-                        正確姿勢和注意事項，並設計圖解小冊子<br>
-                        ，讓年長者在家安全自主訓練，維持日常<br>
-                        運動習慣。
+                        「Young Blood長青體數能」是兩位熱愛運動的數位系學生共同設計推動年長者與久坐族的健康<br>
+                        計畫，增強他們對運動及身體健康的連結。在數位系與體育系教授的指導下，我們結合數位資源<br>
+                        與體育專業，製作了兩款桌遊卡牌：破冰遊戲「阿罵ㄟ炒麵」和運動圖示桌遊卡牌。「阿罵ㄟ炒<br>
+                        麵」融入嘉義在地元素(牡蠣、空心菜)，增進年長者的認知、心理、社交健康，趣味且益智；運<br>
+                        動圖示卡牌則涵蓋暖身、肌耐力、心肺和伸展動作，提供視覺指導、正確姿勢和注意事項，並設<br>
+                        計圖解小冊子，讓年長者在家安全自主訓練，維持日常運動習慣。
                     </p>
                 </div>
-                <img class="light-2" src="img-project/Ellipse 8.png" alt="">
-                <img class="light-3" src="img-project/Ellipse 6 (2).png" alt="">
-                <img class="description-3" src="img-project/作品11 (1).png" alt="">
+                <div class="info-p-1">
+                    <img class="info-img-1" src="img-project/Intro1.png" alt="">
+                </div>
+                <div class="info-p-2">
+                    <img class="info-img-1" src="img-project/Intro2.png" alt="">
+                </div>
             </div>
+            <img class="light-2" src="img-project/Ellipse 8.png" alt="">
+            <img class="light-3" src="img-project/Ellipse 6 (2).png" alt="">
+            <img class="description-3" src="img-project/作品11 (1).png" alt="">
         </div>
         <div class="project-container-3">
             <div class="project-3">
@@ -400,9 +391,15 @@
             </div>
         </div>
     </div>
+    <div id="loadingOverlay">
+        <video src="img/畫面示意.mp4" controls width="100%" height="100%">
+            您的瀏覽器不支援 HTML5 影片。請使用較新的瀏覽器。
+          </video>
+    </div>
     <footer>
         <p>© 2025 NCYU DEDM Graduation</p>
     </footer>
     <script src="project.js"></script>
+    <script src="load.js"></script>
 </body>
 </html>
