--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><button id="project-chose-button"><p>Project</p></button></li>
                     <li><button id="group"><p>社群</p></button></li>
                 </ul>
+                <button id="hamber-button"><img src="img/hamburger menu button.png" alt=""></button>
             </div>
         </nav>
         <div id="social-media-bar">
@@ -38,20 +39,30 @@
                     <button id="school"><a href="project.html"><p>校園迷蹤Campus Quest</p></a></button>
                     <h2 id="h2-2">超現實探索指南</h2>
                     <img id="line2" src="img/Rectangle 21.png" alt="">
-                    <button id="recycle"><a href="project.html"><p>NoAh's CHAOS</p></a></button>
-                    <button id="river"><a href="project.html"><p>貓愁溪</p></a></button>
-                    <button id="witch"><a href="project.html"><p>劍巫</p></a></button>
-                    <button id="heart"><a href="project.html"><p>Crossroads</p></a></button>
+                    <button id="recycle"><a href="project1.html"><p>NoAh's CHAOS</p></a></button>
+                    <button id="river"><a href="project1.html"><p>貓愁溪</p></a></button>
+                    <button id="witch"><a href="project1.html"><p>劍巫</p></a></button>
+                    <button id="heart"><a href="project1.html"><p>Crossroads</p></a></button>
                     <h2 id="h2-3">指尖 Z Power</h2>
                     <img id="line3" src="img/Rectangle 21.png" alt="">
-                    <button id="rock"><a href="project.html"><p>永恆之石的傳奇</p></a></button>
-                    <button id="food"><a href="project.html"><p>菜鳥食驗嘉</p></a></button>
-                    <button id="Play"><a href="project.html"><p>老闆，嘉義碗</p></a></button>
-                    <button id="mushroom"><a href="project.html"><p>菇義</p></a></button>
-                    <button id="music"><a href="project.html"><p>潮言搖擺</p></a></button>
+                    <button id="rock"><a href="project2.html"><p>永恆之石的傳奇</p></a></button>
+                    <button id="food"><a href="project2.html"><p>菜鳥食驗嘉</p></a></button>
+                    <button id="Play"><a href="project2.html"><p>老闆，嘉義碗</p></a></button>
+                    <button id="mushroom"><a href="project2.html"><p>菇義</p></a></button>
+                    <button id="music"><a href="project2.html"><p>潮言搖擺</p></a></button>
                     <button id="close"><img src="img/close 1.png" alt=""></button>
                 </div>
             </div>
+        </div>
+        <div id="hamber">
+            <ul>
+                <button id="project-chose-button1"><p>Project</p></button>
+                <div id="hamber-social">
+                    <li><a href="#"><img src="img/fb.png" alt="Facebook"></a></li>
+                    <li><a href="#"><img src="img/ig.png" alt="Instagram"></a></li>
+                    <li><a href="#"><img src="img/yt.png" alt="YouTube"></a></li>
+                </div>
+            </ul>
         </div>
     </header>
     
@@ -59,8 +70,8 @@
         <div id="video-content">
             <div id="background-black"></div>
             <img id="background-image" src="img/image (1).png" alt="Background">
-            <img id="play-button" src="img/IMG_0054 1.png" alt="Play Button">
-            <img id="scroll-image" src="img/SCROLL.png" alt="Scroll Indicator">
+            <a href="https://youtu.be/2l8-HyEyWrQ?si=ryt3uzRC0VtIDvcP"><img id="play-button" src="img/IMG_0054 1.png" alt="Play Button">
+            <img id="scroll-image" src="img/SCROLL.png" alt="Scroll Indicator"></a>
             <img id="point-image" src="img/Vector 14.svg" alt="Point Indicator">
         </div>
     </div>
@@ -99,13 +110,18 @@
                 </div>
                 <div id="place-info1">
                     <h2>展覽資訊</h2>
+                    <img id="map" src="img/Map image.png" alt="">
+                    <p id="name">地點</p>
                     <p id="name1">國立嘉義大學民雄校區教育館</p>
                     <p id="date1">2024 . 12 . 25</p>
+                    <p id="date">日期</p>
+                    <p id="location">地點</p>
                     <p id="location1">621 嘉義縣民雄鄉文隆村85號</p>
                     <a id="map-link1" href="#"><img src="img/IMG_0051 1.png" alt="link"></a>
                     <img id="map1" src="img/sitemap.jpg" alt="map">
                 </div>
                 <div id="place-info2">
+                    <img id="map" src="img/Map image.png" alt="">
                     <h2>展覽資訊</h2>
                     <p id="name2">國立嘉義大學民雄校區教育館</p>
                     <p id="date2">2024 . 12 . 25</p>
@@ -124,29 +140,33 @@
                     <div id="goods">
                         <ul>
                             <li>
-                                <img src="img/Project A.png" alt="goods">
-                                <h6>周邊商品名稱</h6>
-                                <p>售價:100</p>
+                                <img src="img/2.jpg" alt="goods">
+                                <h6>雷射圖鑑貼紙</h6>
+                                <p>售價：$50</p>
                             </li>
                             <li>
-                                <img src="img/Project A.png" alt="goods">
-                                <h6>周邊商品名稱</h6>
-                                <p>售價:100</p>
+                                <img src="img/3.jpg" alt="goods">
+                                <h6>徽章 set A<br>
+                                    (50mm+隨機貼紙)</h6>
+                                <p>售價：$40</p>
                             </li>
                             <li>
-                                <img src="img/Project A.png" alt="goods">
-                                <h6>周邊商品名稱</h6>
-                                <p>售價:100</p>
+                                <img src="img/4.jpg" alt="goods">
+                                <h6>徽章 set B <br>
+                                    (38mm帆船/金幣/遊戲機)</h6>
+                                <p>售價：$20</p>
                             </li>
                             <li>
-                                <img src="img/Project A.png" alt="goods">
-                                <h6>周邊商品名稱</h6>
-                                <p>售價:100</p>
+                                <img src="img/1.jpg" alt="goods">
+                                <h6>徽章 set C<br>
+                                    (長款)</h6>
+                                <p>售價：$40</p>
                             </li>
                             <li>
-                                <img src="img/Project A.png" alt="goods">
-                                <h6>周邊商品名稱</h6>
-                                <p>售價:100</p>
+                                <img src="img/1.jpg" alt="goods">
+                                <h6>徽章 set D<br>
+                                    (一般款獨角獸)</h6>
+                                <p>售價：$20</p>
                             </li>
                             <img id="shop-description2" src="img/周邊6.png" alt="">
                             <img id="shop-description3" src="img/作品4-2.png" alt="">
@@ -163,7 +183,11 @@
             </div>
         </div>
     </div>
-
+    <div id="loadingOverlay">
+        <video src="img/畫面示意.mp4" controls width="100%" height="100%">
+            您的瀏覽器不支援 HTML5 影片。請使用較新的瀏覽器。
+          </video>
+    </div>
     <footer>
         <div id="footer-container">
             <a href="#"><img id="fb" src="img/fb.png" alt=""></a>
@@ -180,6 +204,7 @@
     </footer>
     
     <script src="index.js"></script>
+    <script src="load.js"></script>
     <script src="scroll.js"></script>
     <script src="project.js"></script>
 </body>
