--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </nav>
         <div id="social-media-bar">
             <ul>
-                <li><a href="#"><img src="img/fb.png" alt="Facebook"></a></li>
-                <li><a href="#"><img src="img/ig.png" alt="Instagram"></a></li>
-                <li><a href="#"><img src="img/yt.png" alt="YouTube"></a></li>
+                <li><a href="https://www.facebook.com/NCYU.DEDM.GraduationExhibition?locale=zh_TW"><img src="img/fb.png" alt="Facebook"></a></li>
+                <li><a href="instagram.com/dedm_expo"><img src="img/ig.png" alt="Instagram"></a></li>
+                <li><a href="https://www.youtube.com/@%E4%BD%8E%E8%91%97%E9%A0%ADDIGITAL"><img src="img/yt.png" alt="YouTube"></a></li>
             </ul>
         </div>
         <div id="Project-page">
@@ -58,9 +58,9 @@
             <ul>
                 <button id="project-chose-button1"><p>Project</p></button>
                 <div id="hamber-social">
-                    <li><a href="#"><img src="img/fb.png" alt="Facebook"></a></li>
-                    <li><a href="#"><img src="img/ig.png" alt="Instagram"></a></li>
-                    <li><a href="#"><img src="img/yt.png" alt="YouTube"></a></li>
+                    <li><a href="https://www.facebook.com/NCYU.DEDM.GraduationExhibition?locale=zh_TW"><img src="img/fb.png" alt="Facebook"></a></li>
+                    <li><a href="instagram.com/dedm_expo"><img src="img/ig.png" alt="Instagram"></a></li>
+                    <li><a href="https://www.youtube.com/@%E4%BD%8E%E8%91%97%E9%A0%ADDIGITAL"><img src="img/yt.png" alt="YouTube"></a></li>
                 </div>
             </ul>
         </div>
