--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </li>
                     </ul>
                     <img id="logo-img" src="img/LOGO1.png" alt="Logo">
-                    <a href="#"><img src="img/Project button.png" alt="Project"></a>
+                    <a href="project.html"><img src="img/Project button.png" alt="Project"></a>
                     <img id="info-decorative-image2" src="img/作品6.png" alt="裝飾">
                     <div id="light"><img src="img/Ellipse 5.png" alt="light"></div>
                 </div>
@@ -123,9 +123,9 @@
                 <div id="place-info2">
                     <img id="map" src="img/Map image.png" alt="">
                     <h2>展覽資訊</h2>
-                    <p id="name2">國立嘉義大學民雄校區教育館</p>
-                    <p id="date2">2024 . 12 . 25</p>
-                    <p id="location2">621 嘉義縣民雄鄉文隆村85號</p>
+                    <p id="name2">高雄展覽館</p>
+                    <p id="date2">2025 . 05 . 15 - 2025 . 05 .17</p>
+                    <p id="location2">806高雄市前鎮區成功二路39號</p>
                     <a id="map-link2" href="#"><img src="img/IMG_0051 1.png" alt="link"></a>
                     <img id="map2" src="img/image 1.png" alt="map">
                 </div>
