--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
     </div>
     <footer>
         <div id="footer-container">
-            <a href="#"><img id="fb" src="img/fb.png" alt=""></a>
-            <a href="#"><img id="ig" src="img/ig.png" alt=""></a>
-            <a href="#"><img id="yt" src="img/yt.png" alt=""></a>
+            <a href="https://www.facebook.com/NCYU.DEDM.GraduationExhibition?locale=zh_TW"><img id="fb" src="img/fb.png" alt=""></a>
+            <a href="instagram.com/dedm_expo"><img id="ig" src="img/ig.png" alt=""></a>
+            <a href="https://www.youtube.com/@%E4%BD%8E%E8%91%97%E9%A0%ADDIGITAL"><img id="yt" src="img/yt.png" alt=""></a>
             <h2>About us</h2>
             <p>ADDRESS: 嘉義縣民雄鄉文隆村85號 國立嘉義大學民雄校區教育館4樓<br>
                 TEL: +886-5-2263411 Est.1511 <br> 
