--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav>
             <div id="nav">
                 <a href="index.html"><img src="img/LOGO2.png" alt="logo"></a>
-                <ul>
-                    <li><button id="project-chose-button"><p>Project</p></button></li>
-                    <li><button id="group"><p>社群</p></button></li>
-                </ul>
+                <div>
+                    <button id="project-chose-button"><p>Project</p></button>
+                    <button id="group"><p>社群</p></button>
+                </div>
                 <button id="hamber-button"><img src="img/hamburger menu button.png" alt=""></button>
             </div>
         </nav>
@@ -101,13 +101,13 @@
             </div>
         </div>
         <div id="info-section-2">
+            <div id="exhibition-options">
+                <img id="Tab-bar" src="img/Tab Bar BG.png">
+                <img id="Rectangle" src="img/Rectangle 20.png" alt="">
+                <button id="place1"><p>校內展</p></button>
+                <button id="place2"><p>校外展</p></button>
+            </div>
             <div id="info-content-2">
-                <div id="exhibition-options">
-                    <img id="Tab-bar" src="img/Tab Bar BG.png">
-                    <img id="Rectangle" src="img/Rectangle 20.png" alt="">
-                    <button id="place1"><p>校內展</p></button>
-                    <button id="place2"><p>校外展</p></button>
-                </div>
                 <div id="place-info1">
                     <h2>展覽資訊</h2>
                     <img id="map" src="img/Map image.png" alt="">
@@ -176,9 +176,9 @@
                         </ul>
                     </div>
                     <img id="shop-description7" src="img/周邊4.png" alt="">
-                    <a href="#"><img id="buy" src="img/Group 7.png" alt=""></a>
+                    <a href="https://forms.gle/rdNdrN8NatcDNw4T6"><img id="buy" src="img/Group 7.png" alt=""></a>
                     <img id="light3" src="img/Ellipse 6 (1).png" alt="light">
-                    <img id="light4" src="img/Ellipse 5 (1).png" alt="">
+                    <!-- <img id="light4" src="img/Ellipse 5 (1).png" alt=""> -->
                 </div>
             </div>
         </div>
@@ -188,24 +188,25 @@
             您的瀏覽器不支援 HTML5 影片。請使用較新的瀏覽器。
           </video>
     </div>
-    <footer>
-        <div id="footer-container">
-            <a href="https://www.facebook.com/NCYU.DEDM.GraduationExhibition?locale=zh_TW"><img id="fb" src="img/fb.png" alt=""></a>
-            <a href="instagram.com/dedm_expo"><img id="ig" src="img/ig.png" alt=""></a>
-            <a href="https://www.youtube.com/@%E4%BD%8E%E8%91%97%E9%A0%ADDIGITAL"><img id="yt" src="img/yt.png" alt=""></a>
-            <h2>About us</h2>
-            <p>ADDRESS: 嘉義縣民雄鄉文隆村85號 國立嘉義大學民雄校區教育館4樓<br>
-                TEL: +886-5-2263411 Est.1511 <br> 
-                FAX:+886-5-2062328<br>
-                MAILBOX: etech@mail.ncyu.edu.tw
-            </p>
-            <h6>© 2025 NCYU DEDM Graduation</h6>
-        </div>
-    </footer>
-    
-    <script src="index.js"></script>
-    <script src="load.js"></script>
-    <script src="scroll.js"></script>
-    <script src="project.js"></script>
 </body>
+
+<footer>
+    <div id="footer-container">
+        <a href="https://www.facebook.com/NCYU.DEDM.GraduationExhibition?locale=zh_TW"><img id="fb" src="img/fb.png" alt=""></a>
+        <a href="instagram.com/dedm_expo"><img id="ig" src="img/ig.png" alt=""></a>
+        <a href="https://www.youtube.com/@%E4%BD%8E%E8%91%97%E9%A0%ADDIGITAL"><img id="yt" src="img/yt.png" alt=""></a>
+        <h2>About us</h2>
+        <p>ADDRESS: 嘉義縣民雄鄉文隆村85號 國立嘉義大學民雄校區教育館4樓<br>
+            TEL: +886-5-2263411 Est.1511 <br> 
+            FAX:+886-5-2062328<br>
+            MAILBOX: etech@mail.ncyu.edu.tw
+        </p>
+        <h6>© 2025 NCYU DEDM Graduation</h6>
+    </div>
+</footer>
+
+<script src="index.js"></script>
+<script src="load.js"></script>
+<script src="scroll.js"></script>
+<script src="project.js"></script>
 </html>
