--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <li><a href="https://www.youtube.com/@%E4%BD%8E%E8%91%97%E9%A0%ADDIGITAL"><img src="img/yt.png" alt="YouTube"></a></li>
                 </div>
             </ul>
+            
         </div>
     </header>
     
@@ -117,16 +118,19 @@
                     <p id="date">日期</p>
                     <p id="location">地點</p>
                     <p id="location1">621 嘉義縣民雄鄉文隆村85號</p>
-                    <a id="map-link1" href="#"><img src="img/IMG_0051 1.png" alt="link"></a>
+                    <a id="map-link1" href="https://maps.app.goo.gl/MJbrGi9WgKxvMSmc9"><img src="img/IMG_0051 1.png" alt="link"></a>
                     <img id="map1" src="img/sitemap.jpg" alt="map">
                 </div>
                 <div id="place-info2">
                     <img id="map" src="img/Map image.png" alt="">
                     <h2>展覽資訊</h2>
+                    <p id="name">地點</p>
                     <p id="name2">高雄展覽館</p>
+                    <p id="date">日期</p>
+                    <p id="location">地點</p>
                     <p id="date2">2025 . 05 . 15 - 2025 . 05 .17</p>
                     <p id="location2">806高雄市前鎮區成功二路39號</p>
-                    <a id="map-link2" href="#"><img src="img/IMG_0051 1.png" alt="link"></a>
+                    <a id="map-link2" href="https://maps.app.goo.gl/KagbVqLJzzu8fZAG9"><img src="img/IMG_0051 1.png" alt="link"></a>
                     <img id="map2" src="img/image 1.png" alt="map">
                 </div>
                 <img id="light2" src="img/Ellipse 6.png" alt="light">
