--- a/index.html
+++ b/index.html
@@ -62,8 +62,20 @@
                     <li><a href="instagram.com/dedm_expo"><img src="img/ig.png" alt="Instagram"></a></li>
                     <li><a href="https://www.youtube.com/@%E4%BD%8E%E8%91%97%E9%A0%ADDIGITAL"><img src="img/yt.png" alt="YouTube"></a></li>
                 </div>
-            </ul>
-            
+            </ul>    
+        </div>
+        <div id="hamber-project">
+            <ul>
+                <button id="back"><img src="img/hamburger menu button (1).png" alt=""></button>
+                <h2>漫遊海海知識</h2>
+                <p>寶島征途</p>
+                <p>YoungBlood <br>
+                    長青體數能</p>
+                <p>遺忘之城的秘密</p>
+                <p>校園迷蹤Campus Quest</p>
+                <h2>超現實探索指南</h2>
+                <p>NoAh's CHAOS</p>
+            </ul>    
         </div>
     </header>
     
