--- a/project1.html
+++ b/project1.html
@@ -21,9 +21,9 @@
         </nav>
         <div id="social-media-bar">
             <ul>
-                <li><a href="#"><img src="img/fb.png" alt="Facebook"></a></li>
-                <li><a href="#"><img src="img/ig.png" alt="Instagram"></a></li>
-                <li><a href="#"><img src="img/yt.png" alt="YouTube"></a></li>
+                <li><a href="https://www.facebook.com/NCYU.DEDM.GraduationExhibition?locale=zh_TW"><img src="img/fb.png" alt="Facebook"></a></li>
+                <li><a href="instagram.com/dedm_expo"><img src="img/ig.png" alt="Instagram"></a></li>
+                <li><a href="https://www.youtube.com/@%E4%BD%8E%E8%91%97%E9%A0%ADDIGITAL"><img src="img/yt.png" alt="YouTube"></a></li>
             </ul>
         </div>
         <div id="Project-page">
@@ -56,6 +56,7 @@
     </header>
 
     <div id="chose">
+        <div id="black"></div>
         <div id="chose-container">
             <button><img id="button-left" src="img-project/左切換.png" alt="button-left"></button>
             <button><img id="button-right" src="img-project/右切換.png" alt="button-right"></button>
@@ -63,7 +64,6 @@
             <img id="project2" src="team/river/貓愁溪_網頁宣傳.png" alt="project2">
             <img id="project3" src="team/witch/SM-A4.jpg" alt="project3">
             <img id="project4" src="team/heart/crossroads500kb.png" alt="project4">
-            <div id="black"></div>
             <button><img id="bar-left" src="img-project/Vector 23-1.png" alt=""><img id="table" src="img-project/桌遊.png"></button>
             <button><img id="bar-mid" src="img-project/Rectangle 16.png" alt=""><img id="PC" src="img-project/PC.png"></button>
             <button><img id="bar-right" src="img-project/Vector 23.png" alt=""><img id="index" src="img-project/網站.png"></button>
