--- a/project2.html
+++ b/project2.html
@@ -21,9 +21,9 @@
         </nav>
         <div id="social-media-bar">
             <ul>
-                <li><a href="#"><img src="img/fb.png" alt="Facebook"></a></li>
-                <li><a href="#"><img src="img/ig.png" alt="Instagram"></a></li>
-                <li><a href="#"><img src="img/yt.png" alt="YouTube"></a></li>
+                <li><a href="https://www.facebook.com/NCYU.DEDM.GraduationExhibition?locale=zh_TW"><img src="img/fb.png" alt="Facebook"></a></li>
+                <li><a href="instagram.com/dedm_expo"><img src="img/ig.png" alt="Instagram"></a></li>
+                <li><a href="https://www.youtube.com/@%E4%BD%8E%E8%91%97%E9%A0%ADDIGITAL"><img src="img/yt.png" alt="YouTube"></a></li>
             </ul>
         </div>
         <div id="Project-page">
