--- a/index.html
+++ b/index.html
@@ -67,14 +67,22 @@
         <div id="hamber-project">
             <ul>
                 <button id="back"><img src="img/hamburger menu button (1).png" alt=""></button>
-                <h2>漫遊海海知識</h2>
-                <p>寶島征途</p>
-                <p>YoungBlood <br>
-                    長青體數能</p>
-                <p>遺忘之城的秘密</p>
-                <p>校園迷蹤Campus Quest</p>
-                <h2>超現實探索指南</h2>
-                <p>NoAh's CHAOS</p>
+                <h3 id="h3-1">漫遊海海知識</h2>
+                <button id="history-1"><a href="project.html"><p>寶島征途</p></a></button>
+                <button id="young-1"><a href="project.html"><p>YoungBlood<br>長青體數能</p></a></button>
+                <button id="tower-1"><a href="project.html"><p>遺忘之城的秘密</p></a></button>
+                <button id="school-1"><a href="project.html"><p>校園迷蹤Campus Quest</p></a></button>
+                <h3 id="h3-2">超現實探索指南</h2>
+                <button id="recycle-1"><a href="project1.html"><p>NoAh's CHAOS</p></a></button>
+                <button id="river-1"><a href="project1.html"><p>貓愁溪</p></a></button>
+                <button id="witch-1"><a href="project1.html"><p>劍巫</p></a></button>
+                <button id="heart-1"><a href="project1.html"><p>Crossroads</p></a></button>
+                <h3 id="h3-3">指尖 Z Power</h2>
+                <button id="rock-1"><a href="project2.html"><p>永恆之石的傳奇</p></a></button>
+                <button id="food-1"><a href="project2.html"><p>菜鳥食驗嘉</p></a></button>
+                <button id="Play-1"><a href="project2.html"><p>老闆，嘉義碗</p></a></button>
+                <button id="mushroom-1"><a href="project2.html"><p>菇義</p></a></button>
+                <button id="music-1"><a href="project2.html"><p>潮言搖擺</p></a></button>
             </ul>    
         </div>
     </header>
@@ -134,7 +142,7 @@
                     <img id="map1" src="img/sitemap.jpg" alt="map">
                 </div>
                 <div id="place-info2">
-                    <img id="map" src="img/Map image.png" alt="">
+                    <img id="map" src="img/螢幕擷取畫面 2025-05-06 092922.png" alt="">
                     <h2>展覽資訊</h2>
                     <p id="name">地點</p>
                     <p id="name2">高雄展覽館</p>
