--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <ul>
                 <button id="back"><img src="img/hamburger menu button (1).png" alt=""></button>
                 <h3 id="h3-1">漫遊海海知識</h2>
-                <button id="history-1"><a href="project.html"><p>寶島征途</p></a></button>
+                <button id="history-1"><a href="project.html"><p>寶島征程</p></a></button>
                 <button id="young-1"><a href="project.html"><p>YoungBlood<br>長青體數能</p></a></button>
                 <button id="tower-1"><a href="project.html"><p>遺忘之城的秘密</p></a></button>
                 <button id="school-1"><a href="project.html"><p>校園迷蹤Campus Quest</p></a></button>
