--- a/project.html
+++ b/project.html
@@ -32,7 +32,7 @@
                 <div id="project-chose">
                     <h2 id="h2-1">漫遊海海知識</h2>
                     <img id="line1" src="img/Rectangle 21.png" alt="">
-                    <button id="history"><a href="project.html"><p>寶島征途</p></a></button>
+                    <button id="history"><a href="project.html"><p>寶島征程</p></a></button>
                     <button id="young"><a href="project.html"><p>YoungBlood<br>長青體數能</p></a></button>
                     <button id="tower"><a href="project.html"><p>遺忘之城的秘密</p></a></button>
                     <button id="school"><a href="project.html"><p>校園迷蹤Campus Quest</p></a></button>
@@ -238,10 +238,10 @@
         <div class="project-container-1">
             <div class="project-1">
                 <img id="post-3" class="logo-img" src="img-project/Treasure Island Journey_A4.jpg" alt="">
-                <h2>台灣近代史桌遊:寶島征途</h2>
+                <h2>台灣近代史桌遊:寶島征程</h2>
                 <h4>#桌遊 #角色扮演 #台灣歷史</h4>
                 <p>
-                    指導老師<br>
+                    指導老師:<br>
                     組員名字:謝儀蓁 何貞禎 林煜家 黃鉦詠
                 </p>
                 <img class="light-1" src="img-project/Ellipse 5 (2).png" alt="">
