--- a/project1.html
+++ b/project1.html
@@ -32,7 +32,7 @@
                 <div id="project-chose">
                     <h2 id="h2-1">漫遊海海知識</h2>
                     <img id="line1" src="img/Rectangle 21.png" alt="">
-                    <button id="history"><a href="project.html"><p>寶島征途</p></a></button>
+                    <button id="history"><a href="project.html"><p>寶島征程</p></a></button>
                     <button id="young"><a href="project.html"><p>YoungBlood<br>長青體數能</p></a></button>
                     <button id="tower"><a href="project.html"><p>遺忘之城的秘密</p></a></button>
                     <button id="school"><a href="project.html"><p>校園迷蹤Campus Quest</p></a></button>
@@ -313,7 +313,7 @@
                 <h2>Crossroads</h2>
                 <h4>#依附關係 #心理測驗</h4>
                 <p>
-                    指導老師:王國鴻教授 張高賓教授<br>
+                    指導老師:黃國鴻教授 張高賓教授<br>
                     組員名字:陳玟靜 王晴榆 林欣霓
                 </p>
                 <img class="light-1" src="img-project/Ellipse 5 (2).png" alt="">
