--- a/project.html
+++ b/project.html
@@ -134,7 +134,7 @@
                     <img class="work-4" src="img-project/chat 2.png" alt="">
                 </div>
                 <div class="menber" id="menber-3">
-                    <img class="menber-img" src="team/school/_DSC0161.JPG" alt="">
+                    <img class="menber-img" src="team/school/DSC0161.JPG" alt="">
                     <h2>朱承育</h2>
                     <p>負責工作</p>
                     <img class="work-1" src="img-project/mail 1.png" alt="">
@@ -372,10 +372,10 @@
                     <img class="menber-img" src="team/young/形象照(已修.jpg" alt="">
                     <h2>黃旭崙</h2>
                     <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <button><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button><img class="work-4" src="img-project/chat 2.png" alt=""></button>
                 </div>
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="img-project/Member Photo.png" alt="">
