--- a/project1.html
+++ b/project1.html
@@ -123,7 +123,7 @@
             <div class="project-3">
                 <img class="description-4" src="img-project/key 2.png" alt="">
                 <div class="menber" id="menber-1">
-                    <img class="menber-img" src="team/nature/_DSC0144.jpg" alt="">
+                    <img class="menber-img" src="team/nature/DSC0144.jpg" alt="">
                     <h2>林紀萱</h2>
                     <p>負責工作</p>
                     <img class="work-1" src="img-project/mail 1.png" alt="">
