--- a/project2.html
+++ b/project2.html
@@ -32,7 +32,7 @@
                 <div id="project-chose">
                     <h2 id="h2-1">漫遊海海知識</h2>
                     <img id="line1" src="img/Rectangle 21.png" alt="">
-                    <button id="history"><a href="project.html"><p>寶島征途</p></a></button>
+                    <button id="history"><a href="project.html"><p>寶島征程</p></a></button>
                     <button id="young"><a href="project.html"><p>YoungBlood<br>長青體數能</p></a></button>
                     <button id="tower"><a href="project.html"><p>遺忘之城的秘密</p></a></button>
                     <button id="school"><a href="project.html"><p>校園迷蹤Campus Quest</p></a></button>
@@ -114,7 +114,7 @@
             <div class="project-3">
                 <img class="description-4" src="img-project/key 2.png" alt="">
                 <div class="menber" id="menber-1">
-                    <img class="menber-img" src="team/rock/_DSC0180.jpg" alt="">
+                    <img class="menber-img" src="team/rock/DSC0180.jpg" alt="">
                     <h2>蔡秉誠</h2>
                     <p>負責工作</p>
                     <img class="work-1" src="img-project/mail 1.png" alt="">
