--- a/project.html
+++ b/project.html
@@ -300,7 +300,7 @@
                     <img class="work-4" src="img-project/chat 2.png" alt="">
                 </div>
                 <div class="menber" id="menber-3">
-                    <img class="menber-img" src="img-project/Member Photo.png" alt="">
+                    <img class="menber-img" src="team/history/IMG_3446.JPG" alt="">
                     <h2>林煜家</h2>
                     <p>負責工作</p>
                     <img class="work-1" src="img-project/mail 1.png" alt="">
